--- a/00-summary.Rmd
+++ b/00-summary.Rmd
@@ -1,10 +1,10 @@
 # Summary {.unnumbered}
 
-In order to form an organ, cells need to take up specialized functions and tasks. Cellular specialization is guided by an interplay of chemical signals and physical forces, where one influences the other. One aspect in cellular identity is its shape, which _e.g._ defines how susceptible the cell may be to intercellular signaling or in which section of the cell cycle it is and therefore can tell us something about its current state. Shape changes are introduced by motor proteins that are controlled and activated in a locally confined manner. For my thesis, I was interested to understand better how cellular shape and geometry impacts downstream cell and organ development. What happens if a cell can't transition to a specific shape? How does it affect tissue structure? How does it affect further development?
+In order to form an organ, cells need to take up specialized functions and tasks. Cellular specialization is guided by an interplay of chemical signals and physical forces, where one influences the other. One aspect in cellular identity is its shape, which _e.g._ defines how susceptible the cell may be to intercellular signaling or in which section of the cell cycle it is and therefore can tell us about its current state. Shape changes are introduced by motor proteins that are controlled and activated in a locally confined manner. For my thesis, I was interested to understand better how cellular shape and geometry impacts downstream cell and organ development. What happens if a cell cant transition to a specific shape? How does it affect tissue structure? How does it affect further development?
 
-One regulator of motor proteins like non-muscle myosin is Shroom3, which recently has been been shown to be expressed and involved in the development of the zebrafish lateral line organ [@Ernst2012a]. Development of the lateral line occurs through a migrating cluster of initially about 150 cells, the posterior lateral line primordium (pLLP), which migrates from the anterior (head) to the posterior (tail) while depositing cell clusters in a regular pattern. Literature on development of the lateral line suggests that in order for a cell cluster to be deposited from the pLLP, rosette formation is a key requirement. Therefore our expectation from the _shroom3_ mutant was that the amount of clusters deposited was significantly reduced. To our surprise, when we first inspected the end of migration lateral line phenotype we found many individuals with a significant _increase_ in cell clusters deposited. This made us re-think the role of Shroom3 during rosette assembly and the processes its involved in.
+One regulator of motor proteins like non-muscle myosin is Shroom3, which recently has been been shown to be expressed and involved in the development of the zebrafish lateral line organ [@Ernst2012a]. Development of the lateral line occurs through a migrating cluster of initially about 150 cells, the posterior lateral line primordium (pLLP), which migrates from the anterior (head) to the posterior (tail) while depositing cell clusters in a regular pattern. Literature on development of the lateral line suggests that in order for a cell cluster to be deposited from the pLLP, rosette formation is a key requirement. Therefore our expectation from the _shroom3_ mutant was that the number of clusters deposited was significantly reduced. To our surprise, when we first inspected the end of migration lateral line phenotype we found many individuals with a significant _increase_ in cell clusters deposited. This made us re-think the role of Shroom3 during rosette assembly and the processes its involved in.
 
-To study the effects of Shroom3 on lateral line development, a mutant line was generated and crossed to various transgenic lines which express fluorescently labeled proteins that locate to organelles such as the plasma-membrane or the nucleus. Following, the mutant with its fluorescent labels was microscopically imaged under different conditions to quantify and analyze various cell-morphometric features. Even though the zebrafish is a popular model organism and its perfectly suited for developmental biology and advanced microscopy, there were no methods that would allow for a standardized and more automated pipeline of data acquisition and processing. Therefore, in order to accurately quantify the morphogenic processes Shroom3 is involved in, I developed a new toolset that significantly improved and facilitated my research. The toolset consists of (1) a new sample mounting method that is based on a 3D agarose gel that increases the number of embryos that can be mounted and imaged at once and speeds up the imaging process significantly (2) for subseqent image analysis I developed four programs that automate the process and therefore make the results much more reproducible and the analysis much more efficient. The first program is used for end of migration analyses, to deduce the pattern, count and size of Lateral Line cell clusters. The second is used not for _end_ of migration, but for _migration_ analyses (on timelapse recordings). Besides this it also prepares the images for more advanced downstream migration analyses and allows to analyse fluorescence signal on a second channel. The third program is used to analyse the pLLP only at high spatial resolution and to deduce the cell count, 3D cell morphometrics (like the volume) and cell orientation. The fourth program finally is used downstream of the second and third program and is capable of detecting and comparing them with the look of wildtype rosettes.
+To study the effects of Shroom3 on lateral line development, a mutant line was generated and crossed with various transgenic lines which express fluorescently labeled proteins that locate to organelles such as the plasma-membrane or the nucleus. Following, the mutant with its fluorescent labels was microscopically imaged under different conditions to quantify and analyze various cell-morphometric features. Even though the zebrafish is a popular model organism and its perfectly suited for developmental biology and advanced microscopy, there were no methods that would allow for a standardized and more automated pipeline of data acquisition and processing. Therefore, in order to accurately quantify the morphogenic processes Shroom3 is involved in, I developed a new toolset that significantly improved and facilitated my research. The toolset consists of (1) a new sample mounting method that is based on a 3D agarose gel that increases the number of embryos that can be mounted and imaged at once and speeds up the imaging process significantly (2) for subseqent image analysis I developed four programs that automate the process and therefore make the results much more reproducible and the analysis much more efficient. The first program is used for end of migration analyses, to deduce the pattern, count and size of Lateral Line cell clusters. The second is used not for _end_ of migration, but for _migration_ analyses (on timelapse recordings). Besides this it also prepares the images for more advanced downstream migration analyses and allows to analyse fluorescence signal on a second channel. The third program is used to analyse the pLLP only at high spatial resolution and to deduce the cell count, 3D cell morphometrics (like the volume) and cell orientation. The fourth program finally is used downstream of the second and third program and is capable of detecting and comparing them with the look of wildtype rosettes.
 
 Here I show that in absence of Shroom3 rosette formation in the migrating pLLP is destabilized leading to facilitated cell cluster deposition and I show how this might be related to traction forces due to a possible interdependence of pLLP acceleration and speed of migration. Furthermore I show that apical constriction and rosette formation is not blocked in Shroom3 deficient embryos, but that larger rosettes are fragmented into many smaller ones. Finally, I give an outlook on how the absense of Shroom3 and hence the absense of morphological changes may deregulate gene transcription by elevating the levels Atoh1a, a transcription factor necessary for hair cell development.
 
