--- a/00--prelim.Rmd
+++ b/00--prelim.Rmd
@@ -2,11 +2,9 @@
 
 ## Acknowledgements {-}
 
-\vspace{1cm}
+\vspace{.5cm}
 
-I thank...\newline
-  
-\noindent my supervisor
+I thank my supervisor
   
 - Prof. Dr. Virginie Lecaudey
 
@@ -14,7 +12,7 @@ I thank...\newline
 
 - Prof. Dr. Manfred Schliwa
   
-\noindent my students
+\noindent and students
   
 - Dmitri Baulin (M.Sc. Thesis)
 - Felix Godron (B.Sc. Thesis)
@@ -23,9 +21,9 @@ I thank...\newline
 - Bianca Rodrigues Lima (Master student)
 - Ivan Alcantara (Master student)
   
-For trust shown in the process, for support and demand. \newline For their patience, engagement and hard work!
-\newline\newline
-\noindent and my animals, without whom this work would not have been possible.
+for trust shown in the process, for support and demand. For their patience, engagement and hard work!
+\newline
+\noindent And I thank my animals, without whom this work would not have been possible.
 
 ```{r ackn, out.width = '50%'}
 knitr::include_graphics("figures/ackn_sn161.png")
@@ -62,8 +60,8 @@ knitr::include_graphics("figures/ackn_sn161.png")
 
 \vspace{1cm}
 
-> "The most exciting time in the history of developmental biology is right now. Fueled both by new technologies and by new thought from other fields, we are exploding old notions and opening fantastic new horizons in embryology. [...]
-> Next, let’s discuss why developmental biology — both normal and pathological — holds such enduring fascination. I see two intertwined explanations. Obviously, it’s the ultimate personal creation story, telling each of us both where we came from and how we were constructed. Less obvious, but perhaps more tantalizing for us scientists, is the sheer complexity of the process. A single cell with a single genome can somehow create trillions of cells in hundreds of radically different types, and those cells can organize themselves into a specific form. The scale of this self-organization process is mind boggling, surely the most amazing of emergent properties."
+> "_The most exciting time in the history of developmental biology is right now. Fueled both by new technologies and by new thought from other fields, we are exploding old notions and opening fantastic new horizons in embryology. [...]
+> Next, let’s discuss why developmental biology — both normal and pathological — holds such enduring fascination. I see two intertwined explanations. Obviously, it’s the ultimate personal creation story, telling each of us both where we came from and how we were constructed. Less obvious, but perhaps more tantalizing for us scientists, is the sheer complexity of the process. A single cell with a single genome can somehow create trillions of cells in hundreds of radically different types, and those cells can organize themselves into a specific form. The scale of this self-organization process is mind boggling, surely the most amazing of emergent properties._"
 > \- John B. Wallingford, 2019^["We Are All Developmental Biologists", Developmental Cell, Vol.50, Issue 2, Jul 22, 2019]
 
 ## Abbreviations {-}
@@ -77,7 +75,7 @@ knitr::kable(data, booktabs = T, col.names = c("Index", "Abbreviation", "Elabora
   kable_styling(full_width = T, latex_options = "striped") %>%
   row_spec(0, bold = T) %>%
   column_spec(1, bold = T) %>%
-  column_spec(3, width = "10cm") %>%
+  column_spec(3, width = "7cm") %>%
   collapse_rows(columns = 1, latex_hline = "none", valign = "top") %>%
   kable_styling(font_size = 9)
 ```
@@ -90,6 +88,6 @@ knitr::kable(data, booktabs = T, col.names = c("Index", "Abbreviation", "Elabora
 
 This thesis contains material from the following papers. The rights have been granted by the publisher to include the material in this dissertation. Some passages have been quoted _verbatim_ for the scientific accuracy from the following sources:
   
-  1. Kleinhans, D. S., & Lecaudey, V. (2019). Standardized mounting method of (zebrafish) embryos using a 3D-printed stamp for high-content, semi-automated confocal imaging. 1–10.
+  1. Kleinhans, D. S. & Lecaudey, V. Standardized mounting method of (zebrafish) embryos using a 3D-printed stamp for high-content, semi-automated confocal imaging. BMC Biotechnol. 19, 1–10 (2019).
 
 `r if(!knitr:::is_latex_output()) '## Abstract {-}'`
