--- a/05-appendix.Rmd
+++ b/05-appendix.Rmd
@@ -6,22 +6,13 @@
 
 (ref:suppzo1) Luminal signaling. The pLLP is indicated by a dark line. Arrows indicate tight-junctions and possibly luminal structures on the apical side. Nuclei are visualized _via_ a _TgBAC(cxcr4b:H2B-RFP)_ transgenic line (section \@ref(mat-lines). ZO-1 is made visible _via_ Immunostaining (section \@ref(mat-anitb). Scalebar = 100 $\mu$m
 
-```{r suppzo1, out.extra = '', fig.pos = "h", out.width = '70%', fig.cap = "(ref:suppzo1)", fig.scap = "Luminal signaling"}
+```{r suppzo1, fig.pos = "H", out.width = '70%', fig.cap = "(ref:suppzo1)", fig.scap = "Luminal signaling"}
 knitr::include_graphics("figures/supp/zo1.png")
 ```
 
-An important regulator for proliferation and organ size is the mechanosensitive hippo signaling pathway where the transcription factors Yap and Taz are the most downstream targets. When dephosphorylated, Yap and Taz translocate from the cytoplasm to the nucleus to induce target gene expression. 
-To check for differences in hippo signaling, immunostainings for Taz were performed. On average the immunostainings suggest that Taz localization is more concentrated in the leading region and in the nuclei of peripherical pLLP cells.
+(ref:suppshrmort) Shroom Ortho- and Paralogs. Groups on y-axis. Amino acid chain length indicated on x-axis. Data derived from Uniprot.
 
-(ref:suppyap) Hippo Signaling in the pLLP. PLLps with nuclei labeled in magenta and Taz in green. Vertical sections show a more basal, a medial and a more apical Z section.
-
-```{r suppyap, fig.pos = "H", out.width = '90%', fig.cap = "(ref:suppyap)", fig.scap = "Hippo Signaling in the pLLP"}
-knitr::include_graphics("figures/supp/immunos_lab.png")
-```
-
-(ref:suppshrmort) Shroom Ortho- and Paralogs
-
-```{r suppshrmort, out.extra = '', fig.pos = "h", out.width = '85%', fig.cap = "(ref:suppshrmort)", fig.scap = "Shroom Ortho- and Paralogs"}
+```{r suppshrmort, fig.pos = "H", out.width = '85%', fig.cap = "(ref:suppshrmort)", fig.scap = "Shroom Ortho- and Paralogs"}
 knitr::include_graphics("figures/supp/Shroom3_orthology-01.png")
 ```
 
@@ -29,9 +20,9 @@ knitr::include_graphics("figures/supp/Shroom3_orthology-01.png")
 
 
 
-(ref:supppos) CC positions **A** Calyculin **B** Rockout **C** Heatshock **D** SU5402 **E** Temperature
+(ref:supppos) Collection of rescue experiment CC positions **A** Calyculin treatment (section \@ref(res-rockresc)) **B** Rock inhibition (section \@ref(res-rockresc)) **C** SU5402 treatment (section \@ref(res-rockresc)) **D** Temperature rescue (section \@ref(res-rockresc))
 
-```{r supppos, out.width='85%', fig.cap="(ref:supppos)", fig.scap="Heatshock CC positions"}
+```{r supppos, out.width = '85%', fig.cap = "(ref:supppos)", fig.scap = "Heatshock CC positions"}
 knitr::include_graphics("figures/supp/cc_positions.png")
 ```
 
