--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -12,7 +12,7 @@ The tools and methods developed for this work have proven easy to adopt even by 
 
 ### Standardized mounting
 
-Although efforts have been made to standardize zebrafish embryo mounting and imaging, most protocols were designed for high throughput widefield screening [@Wittbrodt2014; @Yu2018; @Pulak2016; @Donoughe2018] rather than high-resolution confocal microscopy [Herrgen2009; @A.2015; @Hirsinger2017]. In recent years a couple of studies tackled specifically this issue by developing standardized mounting methods using 3D printed stamps [@Campinho2018; @Donoughe2018; @Masselink2014; @Alessandri2017]. The solution provided here offers a much more efficient way of mounting zebrafish embryos for high resolution confocal microscopy.
+Although efforts have been made to standardize zebrafish embryo mounting and imaging, most protocols were designed for high throughput widefield screening [@Wittbrodt2014; @Yu2018; @Pulak2016; @Donoughe2018] rather than high-resolution confocal microscopy [@Herrgen2009; @A.2015; @Hirsinger2017]. In recent years a couple of studies tackled specifically this issue by developing standardized mounting methods using 3D printed stamps [@Campinho2018; @Donoughe2018; @Masselink2014; @Alessandri2017]. The solution provided here offers a much more efficient way of mounting zebrafish embryos for high resolution confocal microscopy.
 
 Most methods concerned with specimen mounting are developed by microscopy specialized labs that are working with state-of-the-art microscopes. Usually, the most successful of these developments are those which find a collaboration partner that can provide a specimen that fits the microscope use case. Still, for most labs the microscope technology and mounting technique is not in reach since they are usually expensive and are targeted towards very specific scientific questions. The mounting method described in this thesis targets a gap that previously had not been filled. Today, the most useful and most spread microscope within the developmental biology community is the _spinning disc_ microscope. It allows to record relatively high-resolution time-lapse movies (depending on the size of the sample and number of channels) as well as 3-D imaging of multiple specimen at once [@Graf2005]. Sample preparation for spinning disc microscopy does not differ from preparing samples for standard brightfield imaging. Therefore, for many it is a door opener into advanced microscopy. 
 
@@ -24,7 +24,7 @@ Since the method is easy to adopt and uses already existing microscopy resources
 
 Humans depend on vision to orient themselves in their environment. Even though, from a technical perspective, eyesight is not at all a perfect system (blind spot, foveal centralis, farsightedness, shortsightedness, ...), humans usually don't perceive these shortcomings. This is because vision is mostly just a heavily processed and augmented version of the faulty and blurry data coming from the eye, processed by the brain. The brain on the other hand is a very advanced pattern recognition system [@Mattson2014].
 
-For humans analyzing image data is a tedious and tiring process. First, one has to be trained to detect certain features in images, then one has to recognize those features in many different images (from different angles, different sizes, ...), sometimes going into the thousands. Furthermore, even though humans can orient themselves in a 3-D space, for most people recognizing image features in 3-D is a spacial challenge. Weather analyzing images in 2-D or 3-D, it demands a high degree of attention which, in order to ensure high quality data, in turn requires the analyst to have regular breaks. Computers are made to process data. Therefore, to overcome the shortcomings of a human image analyst it is instead possible to train a computer program to specifically detect image features. 
+For humans, analyzing image data is a tedious and tiring process. First, one has to be trained to detect certain features in images, then one has to recognize those features in many different images (from different angles, different sizes, ...), sometimes going into the thousands. Furthermore, even though humans can orient themselves in a 3-D space, for most people recognizing image features in 3-D is a spacial challenge. Whether analyzing images in 2-D or 3-D, it demands a high degree of attention which, in order to ensure high quality data, in turn requires the analyst to have regular breaks. Computers are made to process data. Therefore, to overcome the shortcomings of a human image analyst it is instead possible to train a computer program to specifically detect image features. 
 
 #### 2D Analysis
 
