--- a/01-chap1.Rmd
+++ b/01-chap1.Rmd
@@ -10,13 +10,13 @@ options(tinytex.verbose = TRUE)
 
 ## Development
 
-**Developmental Biology** studies the continuous process of cells adapting to their ever-changing environment from the fertilized egg to a full organism. For an organism to develop, cells need to proliferate (multiply) and become different from each other. To achieve this _genes_ are utilized that are expressed differently at certain times during development and types of cells. Those proteins again are used for geometrical construction or facilitation of chemical reactions. To illustrate this, the cell can be thought of as a marble rolling down a furrowed landscape (figure \@ref(fig:wadd)). Physically a cell represents an open system, which is defined as a unit system able for external interactions. Such a system is therefore not self-dependent and self-sustained, but its current conformation is determined by external interactions. In this landscape a hill would be a high energy-, a valley a low energy state. The path the marble will take is determined by the furrows in the landscape, since it would always prefer a valley. However, this landscape is not a _static_ structure but one that changes at every instant of time.
+**Developmental Biology** studies the continuous process of cells adapting to their ever-changing environment from the fertilized egg to a full organism. For an organism to develop, cells need to proliferate (multiply) and become different from each other. To achieve this, _genes_ are utilized that are expressed differently at certain times during development and types of cells. Those proteins again are used for geometrical construction or facilitation of chemical reactions. To illustrate this, the cell can be thought of as a marble rolling down a furrowed landscape (figure \@ref(fig:wadd)). Physically a cell represents an open system, which is defined as a unit system able for external interactions. Such a system is therefore not self-dependent and self-sustained, but its current conformation is determined by external interactions. In this landscape a hill would be a high energy-, a valley a low energy state. The path the marble will take is determined by the furrows in the landscape, since it would always prefer a valley. However, this landscape is not a _static_ structure but one that changes at every instant of time.
 
 ```{r wadd, out.width = '50%', fig.pos = "h", fig.cap = "Waddington's Classical Epigenetic Landscape"}
 knitr::include_graphics("figures/intro/waddington.jpg")
 ```
 
-As cells differentiate they acquire a certain identity - controlled by the genes they express and the proteins they produce - that again influences cell 'behavior' and its phenotype which includes cell division, migration and cell shape changes. This allows cells to assemble into tissues, which themselves assemble into organs. For developmental biology, which as a scientific discipline originates from embryology, the central interest is to understand how initially inanimate matter (like single atoms and molecules) is able to organize itself to such complex structures we see in living matter at different levels of organismal hierarchy while ensuring a robust developmental plan. Using the marble analogy, studying developmental biology can be thought of tracking multiple cells as they roll down the valley while observing and testing how interactions between them might change their fate. The basic questions arising from this interest are
+As cells differentiate they acquire a certain identity - controlled by the genes they express and the proteins they produce - that again influences cell 'behavior' and its phenotype which includes cell division, migration and cell shape changes. This allows cells to assemble into tissues, which themselves assemble into organs. For developmental biology, which as a scientific discipline originates from embryology, the central interest is to understand how initially inanimate matter (like single atoms and molecules) is able to organize itself to such complex structures we see in living matter at different levels of organismal hierarchy while ensuring a robust developmental plan. Using the marble analogy, studying developmental biology can be thought of as tracking multiple cells as they roll down the valley while observing and testing how interactions between them might change their fate. The basic questions arising from this interest are
 
 - How do tissues arise from a population of cells?
 - How do organs form from tissues?
@@ -103,7 +103,7 @@ Cell shape changes may occur in two different ways...
 
 Apical constriction (AC) is a cell morphogenetic process manifesting by an active narrowing of the apical surface, making an epithelial cell appear bottle or wedge shaped instead of cuboidal. It is usually coordinated by multiple cells within an epithelial layer that raise forces necessary to deform a tissue.
 
-A defining feature of epithelial cells is that they have a basal- (bottom) to apical (top) polarity. At the basal side, the cell is in contact with a variant of extracellular matrix (ECM, a thin sheet-like structure) called the basement membrane, apically the cell forms tight connections to its neighboring cells – a region called the apical junctional complex (AJC). The AJC encompasses three types of junctions: Adherent junctions (AJ) or zonula adherens (ZA), tight junctions (TJ) and desmosomes. Around the ZA dense cables of actomyosin are located that, analog to muscle sarcomeres, are able to contract upon activation of RHO‑associated protein kinase (Rock) and Rock-mediated phosphorylation of the motor protein non-muscle myosin II (NMII) [@StJohnston2011]. The exact mechanism of apical constriction may differ from organism and organ. _E.g._ it has been shown by Martin _et al._ [@Martin2014] that in _Drosophila_ cells are radially organized and RhoA and ROCK have a medioapical focus with RhoA also present at junctions, while chick cells exhibit a planar cell polarity and RhoGEF and ROCK are localized to junctions.
+A defining feature of epithelial cells is that they have a basal- (bottom) to apical (top) polarity. At the basal side, the cell is in contact with a specialized extracellular matrix (ECM, a thin sheet-like structure) called the basement membrane, apically the cell forms tight connections to its neighboring cells – a region called the apical junctional complex (AJC). The AJC encompasses three types of junctions: Adherent junctions (AJ) or zonula adherens (ZA), tight junctions (TJ) and desmosomes. Around the ZA dense cables of actomyosin are located that, analog to muscle sarcomeres, are able to contract upon activation of RHO‑associated protein kinase (Rock) and Rock-mediated phosphorylation of the motor protein non-muscle myosin II (NMII) [@StJohnston2011]. The exact mechanism of apical constriction may differ in different organism and organs. _E.g._ it has been shown by Martin _et al._ [@Martin2014] that in _Drosophila_ cells are radially organized and RhoA and ROCK have a medioapical focus with RhoA also present at junctions, while chick cells exhibit a planar cell polarity and RhoGEF and ROCK are localized to junctions.
 
 Developmental processes that involve AC are...
 
@@ -113,8 +113,8 @@ Developmental processes that involve AC are...
 - Healing and sealing of embryonic tissue
 
 Epithelial rosettes are radially organized cell clusters within an epithelial tissue whose vertices interface a common center similar to a garlic bud or a pie cut into pieces along its center. While the mechanisms of cytoskeletal rearrangements seem to be well conserved, the signals that lead to rosette formation are less well understood and more diverse.
-At least two architectural distinct types of rosettes exist, depending on the tissues polarization. 
-First, in a planar polarized tissue, several cells converge at a central apico-basal line where cells go from a square to a more triangular shape to form a cylindrical structure (like a pie cut into $\geq$ 4) (figure \@ref(fig:constr)B). Such rosettes are usually observed during tissue elongation and rather short-lived. In a second scenario, cells converge to a central apical point through AC (figure \@ref(fig:constr)A). This type of rosette is more long-lived and usually does not resolve but already represents a morphologically pre-mature state of the organ to be formed [@Harding2014b].
+At least two architectural distinct types of rosettes exist, depending on tissue polarization. 
+First, in a planar polarized tissue, several cells converge at a central apico-basal line where cells go from a square to a more triangular shape to form a cylindrical structure (like a pie cut into $\geq$ 4) (figure \@ref(fig:constr)B). Such rosettes are usually observed during tissue elongation and are rather short-lived. In a second scenario, cells converge to a central apical point through AC (figure \@ref(fig:constr)A). This type of rosette is more long-lived and usually does not resolve but already represents a morphologically pre-mature state of the organ to be formed [@Harding2014b].
 
 (ref:constr) Modes of constriction. **A** Cells converge to a central apical point **B** Cells converge at a central apico-basal line.
 
@@ -126,7 +126,7 @@ knitr::include_graphics("figures/intro/constriction.png")
 
 To study biological phenomena, biologists use a variety of non-human model organisms. While each model organism has its advantages and disadvantages, the choice for a model depends on the scientific question.
 
-To study embryonic development the fresh water fish _Danio rerio_ (also known as eng: _zebrafish_ or _ger:_ Zebrabärbling (figure \@ref(fig:zebra)) has become an important model organism over the recent years. _D. rerio_ is a diploid organism with a fully sequenced genome (of the human genes 71.4% have at least one _D. rerio_ ortholog, 47% have a one-to-one ortholog [@Howe2013a]. It has a relatively short alternation of generations (12-16 weeks), a regularly large number of embryos (100 / week & female) and is relatively undemanding in terms of space for breeding. Furthermore, it offers well-established methods for mutagenesis, screening, and generation of transgenic lines. Since its embryos are naturally transparent and develop externally, it is an ideal system for microscopic examination using molecular dyes and tags to visualize _inter_ and _intra_ cellular components even deep within the tissue (_e.g._ cell nuclei or cell membrane fluorescent tags). Together with advances in imaging techniques, this also allows for high-throughput, high-resolution, long-term _in vivo_ imaging. Especially the expression of fluorescent proteins in a tissue- or organ-specific manner in transparent embryos offers enormous possibilities to address interesting and long-standing open questions.
+To study embryonic development the fresh water fish _Danio rerio_ (also known as eng: _zebrafish_ or _ger:_ Zebrabärbling (figure \@ref(fig:zebra)) has become an important model organism over the recent years. _D. rerio_ is a diploid organism with a fully sequenced genome (of the human genes 71.4% have at least one _D. rerio_ ortholog, 47% have a one-to-one ortholog [@Howe2013a]). It has a relatively short alternation of generations (12-16 weeks), a regularly large number of embryos (100 / week & female) and is relatively undemanding in terms of space for breeding. Furthermore, it offers well-established methods for mutagenesis, screening, and generation of transgenic lines. Since its embryos are naturally transparent and develop externally, it is an ideal system for microscopic examination using molecular dyes and tags to visualize _inter_ and _intra_ cellular components even deep within the tissue (_e.g._ cell nuclei or cell membrane fluorescent tags). Together with advances in imaging techniques, this also allows for high-throughput, high-resolution, long-term _in vivo_ imaging. Especially the expression of fluorescent proteins in a tissue- or organ-specific manner in transparent embryos offers enormous possibilities to address interesting and long-standing open questions.
 
 In nature, zebrafish can be found in the shallow waters of the Indian and Pakistan Ganges inflows. It exhibits an oval body shape and can reach a length of up to 5 cm in adulthood. While females are usually more silverish, males have a brownish back and a yellow-whit belly. Laterally it exhibits its name-giving dark-blue iridescent stripes with silver in between.
 
@@ -161,7 +161,7 @@ knitr::include_graphics("figures/intro/ll_system.jpg")
 Each NM is first deposited as a premature cluster of about 30 cells from a migrating cell-aggregate called the posterior lateral line primordium (pLLP) (figure \@ref(fig:llgfp)A). The pLLP delaminates from the pLL placode, caudal to the otic vesicle (figure \@ref(fig:llgfp)B) at around 20 _hours post fertilization_ (hpf) as a group of ~100 cells. After formation of a mesenchymal-like leading region, it starts migrating along a chemokine gradient positioned at the horizontal myoseptum to the tip of the tail [@Chitnis2012a; @Ghysen2007a]. To ensure the development of a functional organ, several fundamental biological processes like cell migration, morphogenesis, proliferation and cell polarization need to be integrated into the pLLP. 
 An important breakthrough in LL research has been the development of a transgenic line expressing a membrane-tethered GFP fusion protein (lyn-GFP) that is expressed under the LL specific promotor of _cldnb_ (claudin b^[construct name: _Tg(-8.0cldnb:lynGFP)_; ZFIN ID: ZDB-TGCONSTRCT-070117-15]) [@Haas2006c], which allows for a much more detailed view and to observe lateral line development _in vivo_. An example of the fluorescence signal visible at ~60 hpf can be seen in figure \@ref(fig:llgfp)B.
 
-(ref:llgfp) Neuromast deposition and pattern. **A** Scheme showing NM deposition over three timepoints (10 min. interval). Dotted lines are time-tracks of rosettes, which become more concentrated over time. Bottom arrow indicates regions of rosette formation, maturation and deposition within the pLLP (scale bar, 20 $\mu$m; 20* WI; ~20 Z-planes; 2.5 $\mu$m spacing. MaxIP. Colors inverted.) **B** Scheme showing the lateral line at end of migration (~60 hpf) and other parts visible through the cldnb:lyn-gfp transgene (as documented through zfin.org) (air objective + 1.5X tube lens; four tiles; ~20 Z-planes; 5 µm spacing. MaxIP. Colors inverted).
+(ref:llgfp) Neuromast deposition and pattern. **A** Scheme showing NM deposition over three timepoints (10 min. interval). Dotted lines are time-tracks of rosettes, which become more concentrated over time. Bottom arrow indicates regions of rosette formation, maturation and deposition within the pLLP (scale bar, 20 $\mu$m; 20* WI; ~20 Z-planes; 2.5 $\mu$m spacing. MaxIP. Colors inverted.) **B** Scheme showing the lateral line at end of migration (~60 hpf) and other parts visible through the _cldnb:lyn-gfp_ transgene (as documented through zfin.org) (10X air objective + 1.5X tube lens; four tiles; ~20 Z-planes; 5 $\mu$m spacing. MaxIP. Colors inverted).
 
 ```{r llgfp, fig.cap = "(ref:llgfp)", fig.scap = "Neuromast deposition and pattern"}
 knitr::include_graphics('figures/intro/ll_gfp.jpg')
@@ -173,7 +173,7 @@ The pLLP is about 100-150 $\mu$m in length (depending on deposition cycle) over 
 
 #### Rosette formation
 
-The onset of morphological and functional changes is determined by signaling of FGF, which is mostly active in the trailing region. Causal for expression of FGF is a signaling center of WNT in the leading region, which promotes expression of FGF ligands _Fgf-3_ and _-10_ [@Aman2008]. Those ligands then diffuse to the trailing domain where binding through _FGF receptor 1_ (Fgfr1) triggers a signaling cascade through which the cells become more columnar, apically constricted and eventually re-organize into epithelial rosettes [@Hava2009; @Lecaudey2008a; @Nechiporuk2008]. Concurrently, cells of the WNT signaling center themselves are not competent to FGF signaling, which is achieved through expression of _Sef_, an intracellular antagonist to Fgfr1 signaling [@Tsang].
+The onset of morphological and functional changes is determined by signaling of FGF, which is mostly active in the trailing region. Causal for expression of FGF is a signaling center of WNT in the leading region, which promotes expression of FGF ligands _Fgf-3_ and _-10_ [@Aman2008]. Those ligands then diffuse to the trailing domain where binding through _FGF receptor 1_ (Fgfr1) triggers a signaling cascade through which the cells become more columnar, apically constricted and eventually re-organize into epithelial rosettes [@Hava2009; @Lecaudey2008a; @Nechiporuk2008]. Concurrently, cells of the WNT signaling center themselves are not competent to FGF signaling, which is achieved through expression of _Sef_, an intracellular antagonist of Fgfr1 signaling [@Tsang].
 
 It was shown that rosette formation in the lateral line primordium (LLP) is an important morphological feature for a lumen to form on top of the rosette which, filled with FGF, acts as a locally enriched source of FGF signaling [@Durdu2014a].
 
@@ -181,7 +181,7 @@ It was shown that rosette formation in the lateral line primordium (LLP) is an i
 
 Downstream of FGF lies the expression of the transcription factor (TF) Atoh1a, which gives cells the potential to become sensory HCs [@Nechiporuk2008]. 
 
-The current model suggests that 
+The current model suggests that: 
 
 1. FGF initiates expression of _atoh1a_ and _deltaA_, where DeltaA activates Notch in neighboring cells to inhibit expression of _atoh1a_ in those. 
 2. Atoh1a in turn suppresses competence for FGF and initiates expression of _atoh1b_ and _deltaD_ which act synergistically with DeltaA in the center cell of the forming rosette. 
@@ -196,7 +196,7 @@ The Shroom protein family is mostly conserved through animal evolution (figure \
 
 #### Recent research {#intro-shroom}
 
-Shroom proteins have three characteristic domains (1) a _PDZ_ domain close to the N-terminus to interact with other proteins with PDZ-binding domains and (2) two _Apx/Shroom_ domains (ASD-1 and -2), the latter being close to the proteins C-terminus. The Shroom domains may interact with proteins containing a _Shroom binding domain_ (SBD) such as Rock to help and facilitate phosphorylation of NMII (figure \@ref(fig:shrminteract)) [@Zalewski2016].
+Shroom proteins have three characteristic domains (1) a _PDZ_ domain close to the N-terminus that interact with other proteins with PDZ-binding domains and (2) two _Apx/Shroom_ domains (ASD-1 and -2), the latter being close to the proteins C-terminus. The Shroom domains may interact with proteins containing a _Shroom binding domain_ (SBD) such as Rock which promotes phosphorylation of NMII (figure \@ref(fig:shrminteract)) [@Zalewski2016].
 
 (ref:interact) Shroom3 functional domains and mode of operation. Sequence of events numbered from 1-4. Approximate scale jumps indicated at arrows.
 
@@ -208,7 +208,7 @@ While in all of the above-mentioned studies Shroom3 was the focus of interest, i
 
 1. _shroom3_ is expressed in the pLLP from stages 24 – 48 hpf.
 2. _shroom3_ is expressed downstream of FGF signaling, which was shown _via_ treatment with an Fgfr inhibiting drug.
-3. Shroom3 localizes to rosette centers, which was accomplished by generating a transgenic line expressing a _shroom3-tagRFP_ fusion protein under the control of a heat-shock^[heat shock proteins are enzymes that assist protein folding and are heat activated] promotor (figure \@ref(fig:shrmernst)A).
+3. Shroom3 localizes to rosette centers, which was accomplished by generating a transgenic line expressing a _shroom3-tagRFP_ fusion protein under the control of a heat-shock^[heat shock proteins are enzymes that assist protein folding whose expression is heat activated] promotor (figure \@ref(fig:shrmernst)A).
 4. Rosette formation is impaired in MO injected embryos, which was shown quantitatively by using a specifically trained _rosette detector_ [@Liu] to count and weight single rosettes.
 
 (ref:ernst) Shroom3 in rosette formation (adapted from Ernst et al., 2012) **A** composite MaxIPs of membrane label and fusion protein showing the localization of Shroom within the pLLP **B** uninjected control and shroom3 MO injected MaxIPs **B’** Heat-maps of rosette detector score.
@@ -245,7 +245,8 @@ While birth rates follow a distribution of Mendelian inheritance (after genotypi
 
 The main objectives of my thesis were...
 
-1. an most extensive characterization of the newly generated _shroom3_ mutant phenotype till 5 dpf
-2. development of methodology for an automated, more precise, higher throughput and less invasive quantification of pLLP and LL phenotypes
+1. to characterize the newly generated _shroom3_ mutant phenotype _via_ quantitative imaging methods
+2. to develop a methodology for an automated, more precise, higher throughput and less invasive quantification of the pLLP and LL phenotypes
 3. to use the mutant phenotype to better understand the relationship between rosette assembly and NM deposition
 4. to analyze the feedback between morphological changes (apical constriction and mediated rosette assembly) and cell fate specification in the pLLP.
+
